[package]
name = "CarbonNative"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.devplus]
inherits = "dev"
debug = true
lto = "thin"
opt-level = 3

[profile.prod]
inherits = "release"
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
#netcorehost = {version = "0.17.0", features = ["latest", "net8_0", "net7_0", "net6_0", "net5_0"]}
#lazy_static = "1.4.0"
bitflags = "2.5.0"
#widestring = "1.0.2"
#lz4_flex = "0.11.3"
#prost = "0.12.4"
#prost-derive = "0.12.4"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.215"
arrayvec = "0.7.6"
[target.'cfg(unix)'.dependencies]
libc = "0.2.164"
[target.'cfg(windows)'.dependencies]
windows-sys = {version="0.59.0", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Kernel"]}
#tabled = "0.15.0"
#bytesize = "1.3.0"
#smol_str = "0.2.1"
#quinn = {version = "0.10.2"}