[package]
name = "CarbonNative"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.devplus]
inherits = "dev"
debug = true
lto = "thin"
opt-level = 3

[profile.prod]
inherits = "release"
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
bitflags = "2.5.0"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.215"
arrayvec = "0.7.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2.164"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }

# Enable static linking when using musl
[target.x86_64-unknown-linux-musl]
rustflags = ["-Ctarget-feature=+crt-static"]
