[package]
name = "CarbonNative"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.devplus]
inherits = "dev"
debug = true
lto = "thin"
opt-level = 3

[profile.prod]
inherits = "release"
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
bitflags = "2.5.0"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
arrayvec = "0.7.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2.164"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }